--- a/jereve/www/html/index.html
+++ b/jereve/www/html/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<!-- added doctype and head as I made this in CodePen and it doesn't require those -->
+<head>
+<link rel="stylesheet" href="http://jereve.ca/styles/styles.css">
+</head>
+
 <body id="LoginForm">
   <div class="jumbotron" style="background-image: url(https://pressfrom.info/upload/images/real/2018/11/05/three-foot-community-library-branded-an-obstruction-by-council-and-slated-for-removal__345870_.jpg?content=1); background-size: 1600px 2010px;">
     <div class="container">
@@ -19,7 +25,7 @@
                       <input type="password" class="form-control" id="inputPassword" placeholder="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
-                   
+
 <p class="forgot"><a href="#">Reset password?</a></p>
 
                   </form>
