--- a/jereve/www/html/index.html
+++ b/jereve/www/html/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <!-- added doctype and head as I made this in CodePen and it doesn't require those -->
 <head>
-<link rel="stylesheet" href="http://jereve.ca/styles/styles.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<style>
+.jumbotron {
+    background-size: cover !important;
+    text-align: left !important;
+    height: 1010px !important;
+    border-radius: 0px !important;
+    background-position: center !important;
+    padding: 0px !important;
+    margin-bottom: 0px !important;
+}
+
+.card {
+  margin-top: 32% !important;
+}
+
+p.forgot {
+  margin-top: 32px !important;
+}
+
+</style>
 </head>
 
 <body id="LoginForm">
